<resources>
    <string name="app_name">Safeter</string>
    <string name="safeter">Safeter</string>
    <string name="sign_in">Sign In</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Let\'s create an account</string>
    <string name="input_name">Name</string>
    <string name="input_confirm_password">Confirm Password</string>
    <string name="input_gender">Gender</string>
    <string name="input_phone_number">Phone Number</string>
    <string name="input_address">Address</string>
    <string name="double_click_me_if_you_feel_danger">Double click me if you feel danger</string>
</resources>